# soc_database

./: LICENSE  README.md
Matlab/: README  example.m  read_crd.m  read_syncpc.m
Matlab/testdata/: mammal01_filterSegment_000.crd  mammal01_filterSegment_000.syncpc
PCL/: CMakeLists.txt  README
PCL/src/: SOC2PCLReader.cpp  SOC2PCLReader.h  read_crd.cpp  read_syncpc.cpp
PCL/testdata/: car02_filterSegment_000.crd  car02_filterSegment_000.syncpc
